--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Student Bio</title>
   </head>
+
   <body>
-    <p>Hello, this is m Homework!</p>
-    <ul>
-      <li>Coding</li>
-    </ul>
+    <header>
+      <h1>Student Bio</h1>
+    </header>
+
+    <section>
+      <h2>Odis Clemons</h2>
+      <img src="https://via.placeholder.com/200" />
+
+      <p>
+        My name is Odis. I already have some experience as a MERN stack
+        developer, but there are many things I dont know. I feel that a code
+        bootcamp will help fill in the gaps of my knowldedge.
+      </p>
+    </section>
+
+    <section>
+      <h2>Contact Info</h2>
+      <ul>
+        <li><strong>Email:</strong><a href="#">odis.clemons@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">odisclemons</a></li>
+        <li>
+          <strong>Portfolio:</strong> <a href="#">https://odisclemons.com</a>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
